# cgt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Plugins/: CMakeLists.txt
Plugins/fbx/: CMakeLists.txt
cgt/: CMakeLists.txt  cgtcommon.cpp  cgtcore.cpp  cgtexport.cpp  cgtmodel.cpp  cgtpath.cpp  cgtproj.cpp  cgttransform.cpp  cgtvisitor.cpp  main.cpp  tinyxml2.cpp
cmake/: FindFBX.cmake
include/cgt/: cgtcommon.h  cgtcore.h  cgtexception.h  cgtexport.h  cgtmodel.h  cgtpath.h  cgtproj.h  cgttransform.h  cgtvisitor.h  config.h  config.h.in  gdalcpp.hpp
resources/gdal/data/: cubewerx_extra.wkt  esri_extra.wkt  gdalvrt.xsd  gml_registry.xml  gmlasconf.xml  gmlasconf.xsd  netcdf_config.xsd  nitf_spec.xml  nitf_spec.xsd  ogrvrt.xsd  osmconf.ini  plscenesconf.json  vdv452.xsd
resources/proj/data/: other.extra  projjson.schema.json  triangulation.schema.json
